project-1-team-infinite/force-app/main/default/objects/Address__c/fields/Mailing_Address__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Address__c</fullName>
    <formula>Street_Number__c + &apos; &apos; + Street_Name__c  + &apos; &apos; +  Unit_Number__c  + &apos; &apos; +  City__c  + &apos; &apos; +  State__c + &apos; &apos; +   Zip_Code__c</formula>
    <label>Mailing Address</label>
    <type>Text</type>
</CustomField>