project-1-team-infinite/force-app/main/default/objects/Address__c/fields/Unit_Number__c.field-meta.xml
<CustomField>
    <fullName>Unit_Number__c</fullName>
    <description>Unit/Apartment Number</description>
    <label>Unit Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>